# qensei

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CHECKPOINTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  poetry.toml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_sut_plugin.yml
.github/workflows/: qa-gate.yml
agents/: README.md  judge.md  r-coverage.md  r-diagnosis.md  r-evidence.md  r-fidelity.md  r-mechanism.md  r-uplift.md
commands/: automate.md  report-bug.md  spec-test.md  test-ticket.md  validate.md
core/specs/: SHOP-123-cart-total.md  SHOP-456-bulk-discount.md  SHOP-DUR-account-durability.md
docs/: architecture.md  delivered-regressions.md  design-coverage.md  diagnostics-and-review-panel.md  overview.md  personas-and-durability.md  preflight-and-selection.md  qa-agent-parity.md  qensei-teaching-deck.html  quality-gates.md  regression-gate.md  remote-backend.md  report-formats.md  ticket-testing-and-reporting.md  walkthrough.md
docs/multiagent/: README.md  review-panel.md
engine/: __init__.py  case.py  citation_gate.py  config.py  coverage_lint.py  credentials.py  design.py  diagnose.py  diagnostics.py  fidelity_lint.py  freshness_gate.py  masking.py  personas.py  preflight.py  report.py  run.py  runner.py  selection.py  sites.py  source_sync.py  sut.py  ui.py
examples/reports/: SHOP-456-bug.md
packs/SHOP-123-cart-total/: README.md  case.py
packs/SHOP-456-discount/: README.md  case.py
packs/SHOP-DUR-account-durability/: README.md  case.py
policies/: README.md  communication-standards.md  git-workflow.md  input-hygiene.md  methodology.md  python-standards.md  release-safety.md  security-review.md  testing-philosophy.md
scripts/: install.sh  new_pack.py  new_sut.py  regen_index.py
specs/: 001-sourceless-ticket-driven-mode.md  001-sut-source-provisioning.md  002-sourceless-ticket-driven-mode.md  003-coverage-metadata-gate.md  004-pack-scaffolding-unification.md
sut/: README.md  contract.md
sut/mock-shop/: manifest.json
tests/: conftest.py  test_sites.py  test_ui.py
ticket/: contract.md
validation-reports/: 2026-06-30-multi-site-restful-booker.md  TEMPLATE.md
(+64 files in other folders)
